...
                        Image(systemName: "heart.fill")
                            .foregroundColor(.red)
                            .font(.system(size: 20))
                    }
                }
                .buttonStyle(.plain)
                .accessibilityIdentifier("favoritesButton")
            }
        }

        // Hide back button
        .navigationBarBackButtonHidden(true)

...
